# HebrewWeek

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  dev.dockerfile  docker-compose.yaml  docker-compose.yml
client/: Dockerfile  admin.html  index.html  package-lock.json  vite.config.ts
client/src/: Admin.tsx  AdminMistakesTab.tsx  AdminParticipantsTab.tsx  AdminTranslationsTab.tsx  App.tsx  HomeTab.tsx  MistakesPane.tsx  NewCanonicalization.tsx  PasswordContext.ts  TranslationsPane.tsx  admin_endpoint.tsx  api_utils.ts  types.d.ts
nginx/: default.conf
src/: api.rs  auth.rs  error.rs  hebrew_db.rs  main.rs  routes.rs  types.rs
