[package]
name = "hebrew-week"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = "0.6.20"
hyper = { version = "0.14.27", features = ["full"] }
rusqlite = { version = "0.29.0", features = ["bundled"] }
serde = "1.0.192"
serde_derive = "1.0.192"
serde_json = "1.0.108"
tokio = { version = "1.33.0", features = ["full"] }
tower-http = { version = "0.3.4", features = ["cors"] }
tsync = "2.0.1"
