[package]
name = "hebrew-week"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-once-cell = "0.5.3"
axum = { version = "0.6.20", features = ["headers"] }
hyper = { version = "0.14.27", features = ["full"] }
itertools = "0.11.0"
rusqlite = { version = "0.29.0", features = ["bundled"] }
scrypt = "0.11.0"
serde = "1.0.192"
serde_derive = "1.0.192"
serde_json = "1.0.108"
tokio = { version = "1.33.0", features = ["full"] }
tower-http = { version = "0.3.4", features = ["cors", "trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tsync = "2.0.1"
