[package]
name = "hebrew-week"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.76"
async-once-cell = "0.5.3"
axum = { version = "0.7.2"}
axum-extra = { version = "0.9.0", features = ["typed-header"] }
hyper = { version = "1.1.0", features = ["full"] }
itertools = "0.12.0"
rusqlite = { version = "0.30.0", features = ["bundled"] }
scrypt = "0.11.0"
serde = "1.0.193"
serde_derive = "1.0.193"
tokio = { version = "1.35.1", features = ["full"] }
tower-http = { version = "0.5.0", features = ["cors", "trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tsync = "2.0.1"
